chore: name of folder was updated